# ledger

./: .gitattributes  .gitignore  CLAUDE.md  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
backend/: .env.example  package-lock.json  package.json
backend/src/: index.js
backend/src/db/: index.js  (+1 more)
desktop-bar/: CODE-SIGNING.md  index.html  login.js  package-lock.json  package.json
desktop-bar/src-tauri/: Cargo.toml  tauri.conf.json
desktop-bar/src-tauri/capabilities/: default.json
desktop-bar/src-tauri/icons/: icon.icns
desktop-bar/src-tauri/src/: main.rs
desktop-bar/ui/: index.html  login.js  settings.html
docs/: LAUNCH-GUIDE.md  domain-setup.md  env-examples.txt  incident-response.md  information-security-policy.md
frontend/: .env.local.example  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AccountCards.tsx  AiChat.tsx  Analytics.tsx  AuthScreen.tsx  BillsList.tsx  CashFlowTile.tsx  CommunityPage.tsx  CreditCardDetails.tsx  CreditScore.tsx  GoalsView.tsx  InsightStrip.tsx  IntelligencePanel.tsx  NetWorthChart.tsx  PlaidLink.tsx  Sidebar.tsx  SubscriptionsTile.tsx  TileFrame.tsx  TileGrid.tsx  TopBar.tsx  TransactionsView.tsx  WorkspaceSwitcher.tsx  components.tsx  tileRegistry.tsx
frontend/lib/: store.ts
frontend/public/: hud-demo.webm  landing.html  privacy.html  security.html  terms.html
mcp-server/: .env.example  package-lock.json  package.json
mcp-server/src/: index.js
mobile/: .env.example  .gitignore  README.md  app.json  eas.json  index.js  package-lock.json  package.json
(+85 files in other folders)
