[package]
name = "ledger-bar"
version = "1.0.0"
description = "Ledger persistent financial HUD"
authors = ["Ledger"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "ledger-bar"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["windows-native"] }
