[package]
name = "persistence"
version = "1.3.1"
description = "Persistence - financial HUD"
authors = ["Persistence"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "persistence"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["windows-native"] }
